--- a/x3m.html
+++ b/x3m.html
@@ -1,1 +1,8 @@
-jo X3M
+
+<div>
+Ally Codes auslesen: <input type="file" id="input" onchange="handleGuildFile(this.files)">
+</div>
+<div>
+ Members auslesen: <input type="file" id="input" onchange="handleMembersFile(this.files)">
+</div>
+<div id="resultTable"></div>
