--- a/x3m.html
+++ b/x3m.html
@@ -1,4 +1,4 @@
-
+<script src="x3m.js"></script>
 <div>
 Ally Codes auslesen: <input type="file" id="input" onchange="handleGuildFile(this.files)">
 </div>
