--- a/x3m.html
+++ b/x3m.html
@@ -1,4 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 <script src="x3m.js"></script>
+ </head>
+<body>
+
 <div>
 Ally Codes auslesen: <input type="file" id="input" onchange="handleGuildFile(this.files)">
 </div>
@@ -6,3 +13,6 @@ Ally Codes auslesen: <input type="file" id="input" onchange="handleGuildFile(thi
  Members auslesen: <input type="file" id="input" onchange="handleMembersFile(this.files)">
 </div>
 <div id="resultTable"></div>
+
+</body>
+</html>
