--- a/x3m.html
+++ b/x3m.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
+<link rel="stylesheet" type="text/css" href="x3m.css">
 <script src="x3m.js"></script>
  </head>
 <body>
