--- a/x3m.html
+++ b/x3m.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="x3m.css">
+  <script src="x3m_members.js"></script>
   <script src="x3m.js"></script>
 </head>
 <body>
